--- a/cliente/categoria/burger.html
+++ b/cliente/categoria/burger.html
@@ -15,7 +15,7 @@
             <ul class="nav_items">
                 <li class="nav_item">
                     <a href="/index.html" class="nav_link">Inicio</a>
-                    <a href="/categoria/burger.html" class="nav_link">Hamburguesa</a>
+                    <a href="../cliente/categoria/burger.html" class="nav_link">Hamburguesa</a>
                     <a href="/categoria/tacos.html" class="nav_link">Tacos</a>
                     <a href="/categoria/quesadillas.html" class="nav_link">Quesadillas</a>
                 </li>                
