--- a/cliente/categoria/burger.html
+++ b/cliente/categoria/burger.html
@@ -14,10 +14,10 @@
         <nav class="nav">                        
             <ul class="nav_items">
                 <li class="nav_item">
-                    <a href="/index.html" class="nav_link">Inicio</a>
-                    <a href="../cliente/categoria/burger.html" class="nav_link">Hamburguesa</a>
-                    <a href="/categoria/tacos.html" class="nav_link">Tacos</a>
-                    <a href="/categoria/quesadillas.html" class="nav_link">Quesadillas</a>
+                    <a href="../index.php" class="nav_link">Inicio</a>
+                    <a href="burger.html" class="nav_link">Hamburguesa</a>
+                    <a href="tacos.html" class="nav_link">Tacos</a>
+                    <a href="quesadillas.html" class="nav_link">Quesadillas</a>
                 </li>                
             </ul>            
         </nav>
