imagenes en quesadilla y tacos

--- a/cliente/categoria/tacos.html
+++ b/cliente/categoria/tacos.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
     <link rel="stylesheet" href="estilo.css">
     <script src="app.js" async></script>
-    <title>Hamburguesa</title>
+    <title>Tacos</title>
 </head>
 <body>
     <header>
@@ -26,57 +26,27 @@
         <!-- Contenedor de elementos -->
         <div class="contenedor-items">
             <div class="item"> <!--PRUEBAS-->
-                <span class="titulo-item">Hamburguesa con Queso Manchego</span>
-                <img src="img/hamgurgesa con queso manchego.jpg" alt="" class="img-item">
-                <span class="precio-item">$80.00</span>
+                <span class="titulo-item">bistec</span>
+                <img src="img/tacosbistec.png" alt="" class="img-item">
+                <span class="precio-item">$14.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">English Horse</span>
-                <img src="img/englishrose.png" alt="" class="img-item">
-                <span class="precio-item">$25.000</span>
+                <span class="titulo-item">pastor</span>
+                <img src="img/tacospastor.png" alt="" class="img-item">
+                <span class="precio-item">$14.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Knock Nap</span>
-                <img src="img/knocknap.png" alt="" class="img-item">
-                <span class="precio-item">$35.000</span>
+                <span class="titulo-item">adobada</span>
+                <img src="img/tacosadobada.png" alt="" class="img-item">
+                <span class="precio-item">$14.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">La Night</span>
-                <img src="img/lanight.png" alt="" class="img-item">
-                <span class="precio-item">$18.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Silver All</span>
-                <img src="img/silverall.png" alt="" class="img-item">
-                <span class="precio-item">$32.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Skin Glam</span>
-                <img src="img/skinglam.png" alt="" class="img-item">
-                <span class="precio-item">$18.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Midimix</span>
-                <img src="img/midimix.png" alt="" class="img-item">
-                <span class="precio-item">$54.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Sir Blue</span>
-                <img src="img/sirblue.png" alt="" class="img-item">
-                <span class="precio-item">$32.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Middlesteel</span>
-                <img src="img/middlesteel.png" alt="" class="img-item">
-                <span class="precio-item">$42.800</span>
+                <span class="titulo-item">chorizo</span>
+                <img src="img/tacoschorizo.png" alt="" class="img-item">
+                <span class="precio-item">$14.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
         </div>
