Cambio de Imagen

--- a/cliente/categoria/burger.html
+++ b/cliente/categoria/burger.html
@@ -44,41 +44,35 @@
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">La Night</span>
-                <img src="img/lanight.png" alt="" class="img-item">
+                <span class="titulo-item">Hamburguesa C</span>
+                <img src="img/hamgurgesa doble carne.jpg" alt="" class="img-item">
                 <span class="precio-item">$18.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Silver All</span>
-                <img src="img/silverall.png" alt="" class="img-item">
+                <span class="titulo-item">Hamburguesa Triple Queso</span>
+                <img src="img/Hamburguesa Triple Queso.png" alt="" class="img-item">
                 <span class="precio-item">$32.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Skin Glam</span>
-                <img src="img/skinglam.png" alt="" class="img-item">
+                <span class="titulo-item">Hamburguesa Especial</span>
+                <img src="img/HamburguesaEspecial.jpg" alt="" class="img-item">
                 <span class="precio-item">$18.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Midimix</span>
-                <img src="img/midimix.png" alt="" class="img-item">
+                <span class="titulo-item">Torta de Hamburguesa</span>
+                <img src="img/HamburguesaTorta.jpg" alt="" class="img-item">
                 <span class="precio-item">$54.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Sir Blue</span>
-                <img src="img/sirblue.png" alt="" class="img-item">
+                <span class="titulo-item">Hamburguesa Mixto</span>
+                <img src="img/HamburguesasMixto.jpg" alt="" class="img-item">
                 <span class="precio-item">$32.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Middlesteel</span>
-                <img src="img/middlesteel.png" alt="" class="img-item">
-                <span class="precio-item">$42.800</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
+            </div>           
         </div>
         <!-- Carrito de Compras -->
         <div class="carrito" id="carrito">
